2004-05-01  James Turner <james@worldforge.org>

* Update the MetaServer API to support in-place inspection of server
  info objects. Also rename various signals to be clearer, and give each
  ServerInfo a status field, to aid in displaying nice UI in clients.
  
* Update the metaQuery tool to the new API

* Add an InGame signal to Avatar, analagous to the old World::Entered signal;
  various changes to View and Player to support this.

2004-05-01  James Turner <james@worldforge.org>

* Use Username accessors on Atlas::Objects::Entity::Account, thanks to
  spec updates
  
* Make the factory set in Factory.cpp a lazy-initialized pointer, to
  avoid potential static initialization problems
  
* Remove the default router argument from Connection

* XCode project updates

2004-04-29  Al Riddoch  <alriddoch@zepler.org>

* Eris/Player.h, Eris/Player.cpp: Accept logins from any account type,
  not just player.

* Eris/Entity.h: Implement missing methods.

2004-04-26  Al Riddoch  <alriddoch@zepler.org>

* Final tweaks to the filename changes.

2004-04-24 James Turner <james@worldforge.org>

* Pre-work for making source file naming capitalization
  consistent (they will all be LikeThis.cpp) - change #includes, 
  and the Makefile.am

2004-04-14 James Turner <james@worldforge.org>

* Sort autoXXX compilation of tests

2004-03-22 James Turner <james@worldforge.org>

* Expand the tests, get more of them working (note you will need Atlas-C++ 0.6
  modifications at present, so best not to bother)
* Fix little bugs all over Player, since it's now being tested, very slightly.
  Login works, as does looking at characters.
* StubServer mechanics to support the above.
* Initial playing around towards registering Atlas factory methods for dynamic
  types, needs more Atlas API work to do anything.

2004-03-18 James Turner <james@worldforge.org>

* Make the stubServer uses sk_poll, so the login test is closer to working,
  at least data is moving over the stream now.
